tests/ui/suggestions/constrain-suggest-ice.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/constrain-suggest-ice.rs:2:8
   |
LL | struct Bug<S>{
   |              - closing delimiter possibly meant for this
LL |     A: [(); {
   |        ^ unclosed delimiter
...
LL | }
   | ^ mismatched closing delimiter

error: mismatched closing delimiter: `}`
  --> $DIR/constrain-suggest-ice.rs:2:8
   |
LL | struct Bug<S>{
   |              - closing delimiter possibly meant for this
LL |     A: [(); {
   |        ^ unclosed delimiter
...
LL | }
   | ^ mismatched closing delimiter

error[E0425]: cannot find value `F` in this scope
  --> $DIR/constrain-suggest-ice.rs:6:9
   |
LL |         F
   |         ^
   |
help: a local variable with a similar name exists
   |
LL |         x
   |         ~
help: you might be missing a type parameter
   |
LL | struct Bug<S, F>{
   |             +++

error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/constrain-suggest-ice.rs:3:21
   |
LL |         let x: [u8; Self::W] = [0; Self::W];
   |                     ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/constrain-suggest-ice.rs:3:36
   |
LL |         let x: [u8; Self::W] = [0; Self::W];
   |                                    ^^^^

error[E0277]: the size for values of type `S` cannot be known at compilation time
  --> $DIR/constrain-suggest-ice.rs:3:36
   |
LL | struct Bug<S>{
   |            - this type parameter needs to be `std::marker::Sized`
LL |     A: [(); {
LL |         let x: [u8; Self::W] = [0; Self::W];
   |                                    ^^^^^^^ doesn't have a size known at compile-time
   |
note: required by a bound in `Bug`
  --> $DIR/constrain-suggest-ice.rs:1:12
   |
LL | struct Bug<S>{
   |            ^ required by this bound in `Bug`
help: consider relaxing the implicit `Sized` restriction
   |
LL | struct Bug<S: ?Sized>{
   |             ++++++++

error[E0392]: parameter `S` is never used
  --> $DIR/constrain-suggest-ice.rs:1:12
   |
LL | struct Bug<S>{
   |            ^ unused parameter
   |
   = help: consider removing `S`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `S` to be a const parameter, use `const S: usize` instead

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0392, E0425.
For more information about an error, try `rustc --explain E0277`.
